Fix white space bug

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@ html * {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -195,7 +193,7 @@ Page Settings
 }
 
 .experience {
-  padding: 100px;
+  padding: 7%;
   background-color: #f2f2f2;
 }
 
@@ -299,14 +297,15 @@ Mobile Adjustments
     padding-top: 1%;
   }
 
-  .experience {
-    padding: 1%;
-  }
+  /*.experience {
+    padding-left: 1%;
+    padding-right: 1% !important;
+  }*/
 
-  .experience .row {
-    padding-left:5vw;
-    padding-right:5vw;
-  }
+  /*.experience .card {
+    padding-left:0.5%;
+    padding-right:1%;
+  }*/
 
   .contact {
     background-color: #f2f2f2;
